# hashing-algorithms

./: .gitignore  README.md  report.ipynb
algorithm/: CMakeLists.txt  README.md  algorithm.sln  build.bat
algorithm/algorithm/: HashMap.h  HashNode.h  algorithm.vcxproj  algorithm.vcxproj.filters  file_utils.h  main.cpp
algorithm/include/: ChainedHashMap.h  ChainedHashMapOLD.h  ChainedHashNode.h  CuckooHash.h  CuckooHashMap.h  HashMap.h  HashNode.h  KeyHash.h  LinkedHashMap.h  LinkedHashMapOLD.h  LinkedHashNode.h  OpenedHash.h  OpenedHashMap.h  OpenedHashMapOLD.h  OpenedHashNode.h  UniversalHash.h  VComparator.h  auxPerformance.h  auxStress.h  primeNumbers.h  utils.h
algorithm/src/: file_utils.cpp  generators.cpp  main.cpp  performanceForInteger.cpp  performanceForString.cpp  performanceForVector.cpp  realLifeDataTest.cpp  testNumber.cpp  testVector.cpp  unitTestsChainedHashMap.cpp  unitTestsChainedashMap.cpp  unitTestsCuckooHashMap.cpp  unitTestsLinkedHashMap.cpp  unitTestsOpenedHashMap.cpp
data/input/: dictionary.csv  test_dictionary.csv
data/output/: example.csv  integerPerformanceM2N.csv  integerPerformanceM2N_1.csv  integerPerformanceM4N_1.csv  integerPerformanceM6N_1.csv  realLifeDataResults.txt  stringPerformanceM2N_1.csv  stringPerformanceM4N_1.csv  stringPerformanceM6N_1.csv
